--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Open+Sans:wght@300;400;600;800&family=Poppins:ital,wght@0,200;0,400;1,500;1,700&display=swap');
 
-
 *{
     padding: 0;
     margin: 0;
@@ -91,14 +90,14 @@ footer{
 
 
 #nome{
-    display: flexbox;
+    display: inline-block;
     text-align: center;
     margin-bottom: 300px;
 
 }
 
 #sobre{
-    display: flexbox;
+    display: flex;
     text-align: center;
     margin-bottom: 200px;
 }
@@ -109,7 +108,7 @@ footer{
 }
 
 #presentation .cta {
-    display: flexbox;
+    display: inline-block;
     padding: 12px 30px;
     color: white;
     background-color: transparent;
@@ -127,7 +126,6 @@ footer{
 }
 
 .presentation.container {
-    display: flexbox;
     min-height: 100vh;
     width: 100%;
     display: flex;
@@ -149,7 +147,7 @@ footer{
 
 #presentation h1 {
     margin-top: ;
-    display: flexbox;
+    display: block;
     width: fit-content;
     font-size: 3rem;
     position: relative;
@@ -160,7 +158,7 @@ footer{
 
 #presentation h3 {
     margin: 10px 50px 20px;
-    display: flexbox;
+    display: block;
     width: fit-content;
     font-size: 2rem;
     position: relative;
@@ -170,7 +168,7 @@ footer{
 }
 
 #presentation h2 {
-    display: flexbox;
+    display: block;
     width: fit-content;
     font-size: 2rem;
     position: relative;
@@ -181,7 +179,7 @@ footer{
 }
 
 #presentation p {
-    display: flexbox;
+    display: block;
     width: fit-content;
     font-size: 13px;
     position: relative;
@@ -193,7 +191,6 @@ footer{
 }
 
 #presentation p > a {
-    display: flexbox;
     text-decoration: none;
     color: transparent;
     animation: text_reveal_link .5s ease forwards;
@@ -201,8 +198,7 @@ footer{
 }
 
 #presentation h1 h3 h2 p span {
-    display: flexbox;
-    position: flex;
+    position: absolute;
     top 0;
     left: 0;
     height: 100%;
