--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ footer{
 }
 
 #presentation .git1 {
-    margin-left: 100px;
+    
     
 }
 
@@ -116,8 +116,10 @@ footer{
     border-radius: 2rem;
     text-transform: uppercase;
     letter-spacing: .10rem;
-    margin-bottom: 400px; // mexer
+    margin-bottom: 200px; // mexer
 }
+
+
 
 #presentation .cta:hover {
     color: yellow;
@@ -146,7 +148,7 @@ footer{
 }
 
 #presentation h1 {
-    margin-top: ;
+    margin-bottom: -300px;
     display: block;
     width: fit-content;
     font-size: 3rem;
@@ -157,7 +159,8 @@ footer{
 }
 
 #presentation h3 {
-    margin: 10px 50px 20px;
+    margin-bottom: -400px;
+    margin-right: 200px;
     display: block;
     width: fit-content;
     font-size: 2rem;
@@ -168,6 +171,8 @@ footer{
 }
 
 #presentation h2 {
+    margin-bottom: 300px;
+    margin-right: -100px;
     display: block;
     width: fit-content;
     font-size: 2rem;
@@ -178,17 +183,17 @@ footer{
     margin-right: -103px;
 }
 
-#presentation p {
-    display: block;
-    width: fit-content;
+/*#presentation p {
+    display: flex;
+   // width: fit-content;
     font-size: 13px;
     position: relative;
     color: transparent;
     animation: text_reveal .5s ease forwards;
     animation-delay: 3.5s;
     margin-top: 300px;
-    margin-right: 150px;
-}
+    margin-right: 400px;
+}*/
 
 #presentation p > a {
     text-decoration: none;
